Issue has been solved

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anek+Telugu:wght@300&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="images/notion.png" alt="Facenook logo">
     <link rel="stylesheet" href="style.css">
     <title>Notion One workspace. Every team.</title>
@@ -18,10 +21,10 @@
                         <a class="header__logo-name" href="#">Notion</a>
                     </div>
                     <div class="header__menu">
-                        <a class="header__menu-option" href="#">Product <img class="header__menu-icon" src="images/icon.png" alt="icon"></a>
-                        <a class="header__menu-option" href="#">Download <img class="header__menu-icon" src="images/icon.png" alt="icon"></a>
-                        <a class="header__menu-option" href="#">Solutions <img class="header__menu-icon" src="images/icon.png" alt="icon"></a>
-                        <a class="header__menu-option" href="#">Resources <img class="header__menu-icon" src="images/icon.png" alt="icon"></a>
+                        <a class="header__menu-option" href="#">Product  <img class="header__menu-icon" src="images/icon.png" alt="icon"></a>
+                        <a class="header__menu-option" href="#">Download  <img class="header__menu-icon" src="images/icon.png" alt="icon"></a>
+                        <a class="header__menu-option" href="#">Solutions  <img class="header__menu-icon" src="images/icon.png" alt="icon"></a>
+                        <a class="header__menu-option" href="#">Resources  <img class="header__menu-icon" src="images/icon.png" alt="icon"></a>
                         <a class="header__menu-option" href="#">Pricing</a>
                     </div>
                 </div>
