--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 </div>
                 <div class="header__right-content">
                     <a class="header__menu-option" href="#">Contact sales</a>
+                    <hr class="header__hr">
                     <a class="header__menu-option" href="#">Log in</a>
                     <button class="header__button">Get Notion free</button>
                 </div>
